#2329 [Fixed] Anchor: Icon no wrap
correct icon color in banner, footer and highlight box

--- a/packages/dso-toolkit/src/components/anchor/anchor.scss
+++ b/packages/dso-toolkit/src/components/anchor/anchor.scss
@@ -5,16 +5,19 @@
 a {
   @include anchor-mixins.root();
 
-  &.download,
-  &.extern {
-    @include anchor-mixins.mode-base();
-  }
+  &:not(.dso-primary, .dso-secondary, .dso-tertiary) {
+    // todo: alternative for :not
+    &.download,
+    &.extern {
+      @include anchor-mixins.mode-base();
+    }
 
-  &.download {
-    @include anchor-mixins.mode-download();
-  }
+    &.download {
+      @include anchor-mixins.mode-download();
+    }
 
-  &.extern {
-    @include anchor-mixins.mode-extern();
+    &.extern {
+      @include anchor-mixins.mode-extern();
+    }
   }
 }
