--- a/packages/dso-toolkit/src/components/highlight-box/highlight-box.scss
+++ b/packages/dso-toolkit/src/components/highlight-box/highlight-box.scss
@@ -29,15 +29,11 @@
         }
 
         &.download {
-          &::after {
-            @include di.base("download-zwart");
-          }
+          @include di.variant("download-zwart");
         }
 
         &.extern {
-          &::after {
-            @include di.base("external-link-zwart");
-          }
+          @include di.variant("external-link-zwart");
         }
       }
     }
@@ -69,15 +65,11 @@ dso-highlight-box {
         }
 
         &.download {
-          &::after {
-            @include di.base("download-zwart");
-          }
+          @include di.variant("download-zwart");
         }
 
         &.extern {
-          &::after {
-            @include di.base("external-link-zwart");
-          }
+          @include di.variant("external-link-zwart");
         }
       }
     }
